Mejore flujo de juego en copa